--- a/app/src/main/res/layout/activity_update_note.xml
+++ b/app/src/main/res/layout/activity_update_note.xml
@@ -17,33 +17,39 @@
         <!--Read all notes-->
         <Button
             android:id="@+id/idBtnReadAllNotesUpdate"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="36dp"
-            android:layout_gravity="start"
+            android:layout_gravity="start|center"
             android:layout_margin="5dp"
             android:text="@string/back_to_list_button"
             android:textAllCaps="false"
-            android:textSize="12sp" />
+            android:textSize="12sp"/>
+
 
         <TextView
             android:id="@+id/idTvDateModifiedUpdate"
             android:layout_width="wrap_content"
-            android:layout_height="36dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
             android:gravity="center"
             android:text="@string/date_modified"
             android:textSize="12sp" />
 
+        <!--Button to delete note-->
+        <ImageButton
+            android:id="@+id/idBtnDeleteNoteRv"
+            android:src="@drawable/trash30"
+            android:backgroundTint="@android:color/transparent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+
         <!--Button to update note-->
         <Button
             android:id="@+id/idBtnUpdateNote"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="36dp"
-            android:layout_gravity="end"
+            android:layout_gravity="end|center"
             android:layout_margin="5dp"
             android:text="@string/add_note_button"
             android:textAllCaps="false"
@@ -51,14 +57,6 @@
 
     </LinearLayout>
 
-    <!--EditText for note title-->
-    <EditText
-        android:id="@+id/idEdtTitleUpdate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="@string/note_title_hint"
-        android:textSize="24sp" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -68,12 +66,22 @@
         android:scrollbarStyle="insideInset"
         android:scrollbars="vertical">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="5dp">
+
+
+            <!--EditText for note title-->
+            <EditText
+                android:id="@+id/idEdtTitleUpdate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:hint="@string/note_title_hint"
+                android:textSize="24sp" />
+
 
             <!--EditText for note text-->
             <EditText
