--- a/app/src/main/res/layout/note_rv_item.xml
+++ b/app/src/main/res/layout/note_rv_item.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_margin="10dp"
     android:elevation="8dp"
     app:cardCornerRadius="4dp">
 
@@ -12,51 +11,55 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
-        android:orientation="vertical">
-
-        <!--text view for our course name-->
-        <TextView
-            android:id="@+id/idTVTitleRv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="3dp"
-            android:textColor="@color/black" />
+        android:orientation="horizontal"
+        android:weightSum="5">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2">
+            android:layout_margin="3dp"
+            android:orientation="vertical"
+            android:layout_weight="4">
 
-            <!--text view for our course tracks-->
             <TextView
-                android:id="@+id/idTVTextRv"
-                android:layout_width="0dp"
+                android:id="@+id/idTVTitleRv"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:padding="3dp"
-                android:textColor="@color/black" />
+                android:text="Title"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
-
-            <!--text view for our course duration-->
-            <TextView
-                android:id="@+id/idTvDateCreatedRv"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="3dp"
-                android:textColor="@color/black" />
+                android:orientation="horizontal"
+       >
+
+                <TextView
+                    android:id="@+id/idTvDateModifiedRv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="3dp"
+                    android:paddingEnd="10dp"
+                    android:text="Date"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/idTVTextRv"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"
+                    android:padding="3dp"
+                    android:text="Text"
+                    android:textColor="@color/black" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-        <!--text view for our course description-->
-        <TextView
-            android:id="@+id/idTvDateModifiedRv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="3dp"
-            android:textColor="@color/black" />
+
 
     </LinearLayout>
 
