--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,18 +13,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="0dp">
+        android:padding="0dp"
+        android:weightSum="3">
 
         <Button
             android:id="@+id/idBtnReadAllNotes"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="36dp"
-            android:layout_gravity="start"
+            android:layout_gravity="start|center"
             android:layout_margin="5dp"
             android:text="@string/back_to_list_button"
             android:textAllCaps="false"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:drawableLeft="@drawable/arrow_back_24"/>
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/idTvDateModified"
@@ -37,28 +44,24 @@
             android:text="@string/date_modified"
             android:textSize="12sp" />
 
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+
         <!--Button to add a new note-->
         <Button
             android:id="@+id/idBtnAddNote"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="36dp"
-            android:layout_gravity="end"
+            android:layout_gravity="end|center"
             android:layout_margin="5dp"
             android:text="@string/add_note_button"
             android:textAllCaps="false"
             android:textSize="12sp" />
 
     </LinearLayout>
-
-    <!--EditText for note title-->
-    <EditText
-        android:id="@+id/idEdtTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="@string/note_title_hint"
-        android:textSize="24sp" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -73,7 +76,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:layout_marginStart="10dp"
+            android:padding="5dp">
+
+            <!--EditText for note title-->
+            <EditText
+                android:id="@+id/idEdtTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:hint="@string/note_title_hint"
+                android:textSize="24sp" />
+
 
             <!--EditText for note text-->
             <EditText
@@ -81,7 +95,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/note_text_hint"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:layout_marginStart="10dp"/>
 
 
         </LinearLayout>
