--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,107 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <!--Recommended to use sp instead of dp for text size-->
-    <!--Top bar-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="0dp"
-        android:weightSum="3">
-
-        <Button
-            android:id="@+id/idBtnReadAllNotes"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
-            android:layout_gravity="start|center"
-            android:layout_margin="5dp"
-            android:text="@string/back_to_list_button"
-            android:textAllCaps="false"
-            android:textSize="12sp"
-            android:drawableLeft="@drawable/arrow_back_24"/>
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
-
-        <TextView
-            android:id="@+id/idTvDateModified"
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="@string/date_modified"
-            android:textSize="12sp" />
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
-
-        <!--Button to add a new note-->
-        <Button
-            android:id="@+id/idBtnAddNote"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
-            android:layout_gravity="end|center"
-            android:layout_margin="5dp"
-            android:text="@string/add_note_button"
-            android:textAllCaps="false"
-            android:textSize="12sp" />
-
-    </LinearLayout>
-
-    <ScrollView
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fadeScrollbars="false"
-        android:scrollbarSize="20sp"
-        android:scrollbarStyle="insideInset"
-        android:scrollbars="vertical">
-
+        android:layout_margin="10dp"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginStart="10dp"
-            android:padding="5dp">
+            android:layout_margin="3dp"
+            android:orientation="horizontal"
+            android:weightSum="6">
 
-            <!--EditText for note title-->
-            <EditText
-                android:id="@+id/idEdtTitle"
-                android:layout_width="match_parent"
+            <Space
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:hint="@string/note_title_hint"
-                android:textSize="24sp" />
+                android:layout_weight="2"/>
 
+            <TextView
+                android:id="@+id/idTVAppNameRv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/notes"
+                android:textColor="@color/black"
+                android:textSize="28sp"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:layout_margin="10dp"
+                android:layout_weight="3"/>
 
-            <!--EditText for note text-->
-            <EditText
-                android:id="@+id/idEdtText"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/note_text_hint"
-                android:textSize="18sp"
-                android:layout_marginStart="10dp"/>
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
 
-
+            <ImageButton
+                android:id="@+id/idBtnAddNewNoteVN"
+                android:src="@drawable/note_add_24"
+                android:backgroundTint="@android:color/transparent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="0dp"
+                android:layout_weight="1"/>
         </LinearLayout>
 
+        <!--recycler view for displaying our courses-->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/idRvNotes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    </ScrollView>
+    </LinearLayout>
 
-</LinearLayout>
+
+</RelativeLayout>
