--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
 
+            <!--(Icons  |  Android Developers, 2024)-->
             <ImageButton
                 android:id="@+id/idBtnAddNewNoteVN"
                 android:src="@drawable/note_add_24"
