--- a/app/src/main/res/layout/activity_update_note.xml
+++ b/app/src/main/res/layout/activity_update_note.xml
@@ -16,6 +16,7 @@
         android:weightSum="3">
 
         <!--Read all notes-->
+        <!--(Icons  |  Android Developers, 2024)-->
         <Button
             android:id="@+id/idBtnReadAllNotesUpdate"
             style="@style/Widget.MaterialComponents.Button.TextButton"
@@ -50,6 +51,7 @@
             android:layout_weight="2"/>
 
         <!--Button to delete note-->
+        <!--(Icons  |  Android Developers, 2024)-->
         <ImageButton
             android:id="@+id/idBtnDeleteNoteRv"
             android:src="@drawable/delete_24"
