--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Sources:
+        (Popular Color Palettes, 2024)
+        (RGB and HEX color palette with names - IMG online, 2018)
+        (Color Library - Coolors, 2022)
+        (HTML Color Codes, 2017)
+    -->
+
     <!-- Gray scale -->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
